--- a/node.js_project/docker-compose.yml
+++ b/node.js_project/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
 services:
   my-app:
+    build:
+      context: .
+      dockerfile: ./node.js_project/app/Dockerfile
     image: my-app:1.0
     ports:
      - 3000:3000
