--- a/node.js_project/docker-compose.yml
+++ b/node.js_project/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: ./node.js_project/app/Dockerfile
-    image: my-app:1.0
+    image: 885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
     ports:
      - 3000:3000
     depends_on:
