--- a/node.js_project/docker-compose.yml
+++ b/node.js_project/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   my-app:
     build:
       context: .
-      dockerfile: ./node.js_project/app/Dockerfile
+      dockerfile: /node.js_project/app/Dockerfile
     image: 885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
     ports:
      - 3000:3000
