--- a/node.js_project/docker-compose.yml
+++ b/node.js_project/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   my-app:
     build:
-      context: ./app/
+      context: ./app
       dockerfile: Dockerfile
     image: 885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
     ports:
