--- a/.github/workflows/node-app.yml
+++ b/.github/workflows/node-app.yml
@@ -43,7 +43,7 @@ jobs:
       # Tag the image for ECR
       - name: Tag Docker image
         run: |
-         docker tag $(docker compose -f asd/docker-compose.yml images -q app) \
+         docker tag $(docker compose -f node.js_project/docker-compose.yml images -q app) \
          ${{ steps.login-ecr.outputs.registry }}/my-app:1.0
 
       # Push the image to ECR
