--- a/.github/workflows/node-app.yml
+++ b/.github/workflows/node-app.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Tag Docker image
         run: |
          docker tag $(docker compose -f node.js_project/docker-compose.yml images -q app) \
-         ${{ steps.login-ecr.outputs.registry }}/my-app:1.0
+         885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
 
       # Push the image to ECR
        # docker compose -f node.js_project/docker-compose.yml push 
