--- a/.github/workflows/node-app.yml
+++ b/.github/workflows/node-app.yml
@@ -43,7 +43,7 @@ jobs:
       # Tag the image for ECR
       - name: Tag Docker image
         run: |
-         docker tag my-app:1.0 885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
+         docker tag my-app 885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
 
       # Push the image to ECR
        # docker compose -f node.js_project/docker-compose.yml push 
