--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -42,5 +42,5 @@ jobs:
             aws ecr get-login-password --region $AWS_DEFAULT_REGION | \
               docker login --username AWS --password-stdin 885554903941.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
               
-            docker pull 885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app/image:1.0
+            docker pull 885554903941.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
             docker compose -f /home/ubuntu/docker-compose.yml up -d
