--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -26,6 +26,15 @@ jobs:
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Copy docker-compose.yml to server
+        uses: appleboy/scp-action@v0.1.0
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "app/docker-compose.yml"
+          target: "/home/ubuntu/docker-compose.yml"
+
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
         with:
