--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -26,13 +26,17 @@ jobs:
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      #- name: Copy docker-compose.yml to server
-       # uses: appleboy/scp-action@v0.1.0
-        #with:
-         # host: ${{ secrets.SERVER_IP }}
-          #username: ${{ secrets.SERVER_USER }}
-          #key: ${{ secrets.SERVER_SSH_KEY }}
-          #source: "node.js_project/docker-compose.yml"
+      - name: Copy docker-compose.yml to server
+        uses: appleboy/scp-action@v0.1.0
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cat <<'EOF' > /home/azureuser/docker-compose.yml
+            $(cat node.js_project/docker-compose.yml)
+            EOF
+         # source: "node.js_project/docker-compose.yml"
           #target: "/home/azureuser/docker-compose.yml"
 
       - name: Deploy via SSH to Dev Server
