--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -27,17 +27,13 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Copy docker-compose.yml to server
-        uses: appleboy/scp-action@v0.1.0
+        uses: devops-infra/action-sftp@v2
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            cat <<'EOF' > /home/azureuser/docker-compose.yml
-            $(cat node.js_project/docker-compose.yml)
-            EOF
-         # source: "node.js_project/docker-compose.yml"
-          #target: "/home/azureuser/docker-compose.yml"
+          source: node.js_project/docker-compose.yml
+          target: /home/azureuser/
 
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
