--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -27,13 +27,14 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Copy docker-compose.yml to server
-        uses: devops-infra/action-sftp@v2
+        uses: pierrickdelrieu/scp-action@v0.1.0
         with:
           host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          source: node.js_project/docker-compose.yml
-          target: /home/azureuser/
+          ssh_port: 22
+          ssh_username: ${{ secrets.SERVER_USER }}
+          ssh_key: ${{ secrets.SERVER_SSH_KEY }}
+          source_dir: node.js_project/docker-compose.yml
+          destination_dir: /home/azureuser/
 
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
