--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -27,14 +27,13 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Copy docker-compose.yml to server
-        uses: pierrickdelrieu/scp-action@v0.1.2
+        uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.SERVER_IP }}
-          ssh_port: 22
-          ssh_username: ${{ secrets.SERVER_USER }}
-          ssh_key: ${{ secrets.SERVER_SSH_KEY }}
-          source_dir: node.js_project/docker-compose.yml
-          destination_dir: /home/azureuser/
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: node.js_project/docker-compose.yml
+          target: /home/azureuser/
 
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
