--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -34,6 +34,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: "${{ github.workspace }}/node.js_project/docker-compose.yml"
           target: /home/azureuser/
+          recursive: false
 
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
