--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -32,7 +32,7 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "${{ github.workspace }}/node.js_project/docker-compose.yml"
+          source: "docker-compose.yml"
           target: /home/azureuser/
           recursive: false
 
