--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -33,7 +33,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: node.js_project/docker-compose.yml
-          target: /home/azureuser/docer.compose.yml
+          target: /home/azureuser/docker.compose.yml
 
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
