--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -32,8 +32,8 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: node.js_project/docker-compose.yml
-          target: /home/azureuser/docker.compose.yml
+          source: "node.js_project/docker-compose.yml"
+          target: "/home/azureuser/docker-compose.yml"
 
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
