--- a/.github/workflows/node_app_cd.yml
+++ b/.github/workflows/node_app_cd.yml
@@ -36,7 +36,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: "docker-compose.yml"
-          target: "/home/azureuser/docker-compose.yml"
+          target: "/home/azureuser/"
 
       - name: Deploy via SSH to Dev Server
         uses: appleboy/ssh-action@v0.1.7
